sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var x=0
do {
	x=0
	for (i <- 0 to getNombreValeurs()-2) {
		if getValeur(i)>getValeur(i+1) {
			void echange(int i, int i+1)
			x=1
		}
	}
}
while (x==1)
}
